Added max width and margin auto

--- a/app.css
+++ b/app.css
@@ -4,7 +4,11 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body {
+    margin: 0 auto;
+    max-width: 1200px;
+    background-color: black;
+}
 /* Utilities */
 .container{
     margin: auto;
